tests/ui/invalid-compile-flags/invalid-llvm-passes.rs
//@ build-fail
//@ compile-flags: -Cpasses=unknown-pass

fn main() {}

//~? ERROR failed to run LLVM passes: unknown pass name 'unknown-pass'
